Store list of ImageInfos, do not keep accessing the current icon items while calling kapp->processEvents. (Interestingly we had the same crash for assigning tags and fixed it already ;-) )

BUG: 180570

svn path=/trunk/extragear/graphics/digikam/; revision=910771